Float-in, scale animation. Fixed name wrapping on feed.

--- a/css/feed.css
+++ b/css/feed.css
@@ -15,6 +15,16 @@
     width: 100%;
     border-radius: 10px;
     filter: drop-shadow(0 0 3px var(--separator-color));
+    animation: float-in 300ms ease-out;
+}
+
+@keyframes float-in {
+    from {
+        transform: translateX(100vw);
+    }
+    to {
+        transform: translateX(0);
+    }
 }
 
 .posts .profile-picture {
@@ -27,10 +37,10 @@
 }
 
 .posts span {
-    position: relative;
     display: inline-block;
-    top: -28px;
-    left: 10px;
+    margin: 30px 20px;
+    transform: translateY(-24px);
+    word-wrap: break-word;
 }
 
 .posts a {
@@ -52,6 +62,10 @@
     filter: drop-shadow(0 0 5px var(--separator-color-alt));
 }
 
+.posts .profile-picture:hover {
+    scale: 1.1;
+}
+
 .interact {
     padding: 0 20px 10px;
     justify-content: space-evenly;
@@ -59,6 +73,7 @@
     height: 32px;
     text-align: center;
 }
+
 .interact a {
     position: relative;
     transform: translateY(-10px);
@@ -79,6 +94,7 @@
     justify-content: space-evenly;
     height: 60px;
 }
+
 #select-page img {
     max-width: 30px;
     width: 100%;
